chore: remove the use of commons-io and commons-text
We keep the jars in the distribution, however, we no longer depend
on commons-io and commons-text